# oh-my-workbench

./: .gitignore  LICENSE  README.md  RESULT.md  package-lock.json  package.json
docs/: ARCHITECTURE.md  PRD.md  UX.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  paths.rs
src-tauri/src/commands/: config.rs  hotkey.rs  icon.rs  launcher.rs  mod.rs
src-tauri/src/domain/: bookmark_import.rs  config_store.rs  icon_extractor.rs  launcher.rs  mod.rs  scheme_whitelist.rs  snapshot.rs
src/components/: AddItemDialog.tsx  CategoryCard.tsx  InlineNameInput.tsx  ItemIcon.tsx  SearchResults.tsx  SortableItem.tsx
src/hooks/: useTheme.ts
src/icons/: search.ts  simpleIconsIndex.ts
src/ipc/: commands.ts  types.ts
src/state/: configStore.ts  editModeStore.ts  selectors.ts
